##=============================================================================
##
## libbsat: Top-level automake file
##
##=============================================================================

ACLOCAL_AMFLAGS=-Im4

SUBDIRS=\
	include \
	lib \
	test \
	util \
	example

pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA=@PACKAGE_NAME@.pc
