##=============================================================================
##
## libbsat: lib/Makefile.am
##
##=============================================================================

lib_LTLIBRARIES=\
	libbsat.la

libbsat_la_CFLAGS=\
 	-I@top_builddir@/include

libbsat_la_LDFLAGS=\
	-version-info @BSAT_LIB_VERSION@ \
	-lev

libbsat_la_SOURCES=\
	bsat.c
